--- a/UntestableLibrary.Prig/UntestableLibrary.Prig.csproj
+++ b/UntestableLibrary.Prig/UntestableLibrary.Prig.csproj
@@ -8,7 +8,6 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>UntestableLibrary.Prig</RootNamespace>
-    <AssemblyName>UntestableLibrary.Prig</AssemblyName>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug%28.NET 3.5%29|AnyCPU'">
@@ -20,6 +19,7 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <AssemblyName>UntestableLibrary.v2.0.50727.v1.0.0.0.MSIL.Prig</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release%28.NET 3.5%29|AnyCPU'">
     <OutputPath>bin\Release%28.NET 3.5%29\AnyCPU\</OutputPath>
@@ -30,6 +30,7 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <AssemblyName>UntestableLibrary.v2.0.50727.v1.0.0.0.MSIL.Prig</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug%28.NET 4%29|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
@@ -40,6 +41,7 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <AssemblyName>UntestableLibrary.v4.0.30319.v1.0.0.0.MSIL.Prig</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release%28.NET 4%29|AnyCPU'">
     <OutputPath>bin\Release%28.NET 4%29\AnyCPU\</OutputPath>
@@ -50,6 +52,7 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <AssemblyName>UntestableLibrary.v4.0.30319.v1.0.0.0.MSIL.Prig</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
