Support Profiler Chain
Profiler Chain means that a main profiler calls one profiler after another. Microsoft Fakes once supported in the times when it was called Moles.
It is the feature that is required when collaborating with code coverage tools like NCover. See also the following thread: [NCover  Moles coverage support](http://www.ncover.com/forum/show_topic/1191)

* All: Added the monitor events of profiling to support Profiler Chain.
* prig: Added a new feature Profiler Chain to 'Runner'.

--- a/Test.prig/Test.prig.vcxproj
+++ b/Test.prig/Test.prig.vcxproj
@@ -366,6 +366,7 @@
     <ClCompile Include="..\CppAnonym\Urasandesu.CppAnonym\Urasandesu\CppAnonym\StackFrame.cpp" />
     <ClCompile Include="..\CppAnonym\Urasandesu.CppAnonym\Urasandesu\CppAnonym\StackTrace.cpp" />
     <ClCompile Include="..\CppAnonym\Urasandesu.CppAnonym\Urasandesu\CppAnonym\Utilities\AutoPtr.cpp" />
+    <ClCompile Include="..\CppAnonym\Urasandesu.CppAnonym\Urasandesu\CppAnonym\Utilities\CComClassFactorySlim.cpp" />
     <ClCompile Include="..\CppAnonym\Urasandesu.CppAnonym\Urasandesu\CppAnonym\Utilities\SemiAutoPtr.cpp" />
     <ClCompile Include="..\CppAnonym\Urasandesu.CppAnonym\Urasandesu\CppAnonym\Utilities\TypeInfo.cpp" />
     <ClCompile Include="..\Swathe\Urasandesu.Swathe\Urasandesu\Swathe\Metadata\ControlFlow.cpp" />
