Enhancement of Recognizable Pattern
* All: [BUG FIX] Corrected the tests for .NET 4. They specify MetadataToken directly, so it can't follow when Windows Update is performed. In the future, Stubber will generate them automatically, but it haven't been ready yet. I plan that temporarily get out of the issue by T4 template auto generation.
* All: Improved the code coverage of sample test.
* All: Refactoring Weaver. Moved helper classes to other files.

--- a/Test.program1/Test.program1.csproj
+++ b/Test.program1/Test.program1.csproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <Compile Include="MyLibraryTest\LifeInfoTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="System\Globalization\Prig\PJapaneseLunisolarCalendarTest.cs" />
     <Compile Include="System\Globalization\Prig\PPersianCalendarTest.cs" />
     <Compile Include="System\IO\Prig\PMemoryStreamTest.cs" />
     <Compile Include="System\Prig\PConvertTest.cs" />
